# ida-headless-mcp

./: .gitignore  pyproject.toml
.kiro/specs/ida-headless-mcp/: .config.kiro  design.md  requirements.md  tasks.md
ida_headless_mcp/: __init__.py  __main__.py  batch_manager.py  config.py  errors.py  ida_bridge.py  models.py  server.py  session_manager.py
ida_headless_mcp/scripts/: __init__.py  command_loop.py
ida_headless_mcp/tools/: batch.py  bookmarks.py  callgraph.py  comments.py  data.py  decompile.py  disassembly.py  enums.py  functions.py  imports_exports.py  patching.py  scripting.py  search.py  segments.py  sessions.py  signatures.py  strings.py  types.py  xrefs.py
tests/: conftest.py  strategies.py
tests/integration/: conftest.py  test_end_to_end.py  test_ida_process.py
tests/property/: test_batch.py  test_bookmarks.py  test_callgraph.py  test_comments.py  test_data.py  test_decompile.py  test_disassembly.py  test_enums.py  test_function_tools.py  test_ida_path_validation.py  test_imports_exports.py  test_patching.py  test_scripting.py  test_search.py  test_segments.py  test_session_lifecycle.py  test_signatures.py  test_strings.py  test_types.py  test_validation.py  test_xrefs.py
tests/unit/: test_batch_manager.py  test_cli.py  test_command_loop.py  test_config.py  test_errors.py  test_ida_bridge.py  test_mock_infrastructure.py  test_models.py  test_server.py  test_session_manager.py  test_strategies.py
tests/unit/test_tools/: __init__.py  test_batch.py  test_bookmarks.py  test_callgraph.py  test_comments.py  test_data.py  test_decompile.py  (+12 more)
