[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-headless-mcp"
version = "0.1.0"
description = "IDA Pro Headless MCP Server — exposes IDA reverse engineering capabilities as MCP tools"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ida_headless_mcp*"]
